dev/count/count-demo.tf
provider "aws" {
  region = "us-west-2"
}


resource "aws_security_group" "vars_demo" {
  name = "demo-variables-${var.elb_names[count.index]}"
  count = 5
  ingress {
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = [var.vpn_ip]
  }

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = [var.vpn_ip]
  }

 ingress {
    from_port        = 53
    to_port          = 53
    protocol         = "tcp"
    cidr_blocks      = [var.vpn_ip]
  }

}
